--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^2.22.0",
     "next": "12.2.3",
+    "random-words": "^1.2.0",
     "react": "18.2.0",
+    "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.7",
     "typescript": "4.7.4"
   }
 }
